updated about page

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ padding:2em;
          <iframe style="padding:2%;width: 80%;
     height: 100%;"src="https://www.youtube.com/embed/videoseries?list=PLBgiNwpkkvdUgsInSBjV1LZ7HhdfmK-Vg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
 </div>
-        <img class="center_1" style="opacity:20%" src="IMG_2404.jpeg">
+        <img class="center_1" style="opacity:20%" src="img/IMG_2404.jpeg">
 
 
         <div class = "tabcontainer">
@@ -391,7 +391,8 @@ padding:2em;
     <div class = "container_1" style="background-image:url('img/14875863_10209979378548350_1073256539_o.jpeg');background-size: cover; /* or contain depending on what you want */
   background-position: center center;
   background-repeat: no-repeat;" id = "Contact">
-  <h1 style =  "position:absolute;text-align:center;width:50%;color:white;font-size:6vh;width:100%;bottom:15%;"> Booking:
+  <img class="center_1" style="height:100%;width:auto;opacity:100%;float:left;border-right:solid;border-color:black" src = "img/DSC_0048.jpg">
+  <h1 style =  "position:absolute;text-align:right;right:5%;width:40%;color:white;font-size:6vh;width:100%;bottom:15%;"> Booking:
         <a style="display:inline;color:inherit" class = "email" href="mailto:danpetersmusic@gmail.com">danpetersmusic@gmail.com</a>
         </h1>
         <div class = "tabcontainer">
@@ -402,7 +403,7 @@ padding:2em;
     </div>
     <div>
 
-    <div class="icon-bar-horizontal" style="position:absolute;left:25%;bottom:5%;margin-left: auto;margin-right: auto;">
+    <div class="icon-bar-horizontal" style="position:absolute;right:5%;bottom:5%;margin-left: auto;margin-right: auto;">
           <a href="http://www.facebook.com" class = "facebook opaque"><i class="fa fa-facebook"></i></a>
           <a href="#" class = "youtube opaque" ><i class="fa fa-youtube"></i></a>
           <a href="#" class = "instagram opaque" ><i class="fa fa-instagram"></i></a>
