--- a/index.html
+++ b/index.html
@@ -316,63 +316,6 @@ padding:2em;
         font-size: 3vw;
 
       }
-
-		#section03 a {
-		  padding-top: 0;
-		}
-		#section03 a span {
-		  position: absolute;
-		  top: 0;
-		  left: 50%;
-		  width: 46px;
-		  height: 46px;
-		  margin-left: -23px;
-		  border: 1px solid #fff;
-		  border-radius: 100%;
-		  box-sizing: border-box;
-		}
-		#section03 a span::after {
-		  position: absolute;
-		  top: 50%;
-		  left: 50%;
-		  content: '';
-		  width: 16px;
-		  height: 16px;
-		  margin: -12px 0 0 -8px;
-		  border-left: 1px solid #fff;
-		  border-bottom: 1px solid #fff;
-		  -webkit-transform: rotate(-45deg);
-		  transform: rotate(-45deg);
-		  box-sizing: border-box;
-		}
-		#section03 a span::before {
-		  position: absolute;
-		  top: 0;
-		  left: 0;
-		  z-index: -1;
-		  content: '';
-		  width: 44px;
-		  height: 44px;
-		  box-shadow: 0 0 0 0 rgba(255,255,255,.1);
-		  border-radius: 100%;
-		  opacity: 0;
-		  -webkit-animation: sdb03 3s infinite;
-		  animation: sdb03 3s infinite;
-		  box-sizing: border-box;
-		}
-		.demo a {
-		  position: absolute;
-		  bottom: 27%;
-		  left: 48%;
-		  z-index: 5;
-		  -webkit-transform: translate(0, -50%);
-		  transform: translate(0, -50%);
-		  color: #fff;
-		  font : normal 400 20px/1 'Josefin Sans', sans-serif;
-		  letter-spacing: .1em;
-		  text-decoration: none;
-		  transition: opacity .3s;
-		}
 		@-webkit-keyframes sdb03 {
   0% {
     opacity: 0;
@@ -403,25 +346,52 @@ padding:2em;
     opacity: 0;
   }
 }
-
 		.demo a:hover {
 		  opacity: .5;}
+
+  @media screen and (max-width: 600px){
+  	.name{
+  		font-size:16vw;
+  	}
+  	.title{
+  		font-size:6vw;
+  	}
+  	.tabcontainer{
+  		height:3.5%;
+  		padding-top:3%;
+  	}
+  	.tablink{
+	font-size: 5vw;
+    font-family: Palatino, Palatino Linotype, Palatino LT STD, Book Antiqua, Georgia, serif;
+    padding:4%;}
+  	
+  	.icon-bar{
+  		right:0;
+  	}
+      .icon-bar a {
+        display: block;
+        text-align: center;
+        padding: .5vh;
+        transition: all 0.3s ease;
+        color: white;
+        font-size: 4vh;
+      }
+      .container_1{
+      	background-position:25% top;
+      }
+  }
+
 		</style>
 
 <body>
 	<div class = "container_1" id = "Home" style = "background-image:url('img/444E8202-8CF7-478F-B5A3-1B3DAF132E6B.jpeg');background-size: cover; /* or contain depending on what you want */
-  background-position: center center;
   background-repeat: no-repeat;
   ">
 		
-    	<div class = "split left" style="display:inline;background-color:none;text-shadow: 2px 2px 0 black;padding-left:5%;width:55%;float:none;text-align:center;top:3em"> 
+    	<div class = "split left" style="display:inline;background-color:none;padding-left:5%;width:55%;float:none;text-align:center;top:5em"> 
     		<h1 class = "name" style="color:rgba(245, 245, 245,1); "> Dan Peters </h1> 
-    		<h3 class = "title"style="color:rgba(245, 245, 245,1) "> pianist & singer-songwriter </h3>
+    		<h3 class = "title"style="color:rgba(245, 245, 245,1);opacity:95%; "> jazz pianist & singer-songwriter </h3>
  		</div>
-
-		<section id="section03" class="demo">
-  		<a href="#Music"><span></span><br><br><br>MUSIC</a>
-		</section>
 
 		<div class = "tabcontainer">
         <a class="tablink" href="#Home" style="color:lightblue"> Home</a>
@@ -432,17 +402,16 @@ padding:2em;
 
 
 	</div>
-
     
     <div class = "container_1" id = "Music">
-        <div class="split left" style="height:100%;padding-top:0;background-color:rgba(50, 143, 168,.8);">
-        	        <h1 class = "about_title" style="text-shadow: 2px 2px 0 black;color:rgba(245, 245, 245,1);"> LISTEN </h1>
+        <div class="split left" style="height:100%;padding-top:0;background-color:rgba(50, 143, 168,.7);">
+        	        <h1 class = "about_title" style="color:rgba(245, 245, 245,1);"> LISTEN </h1>
 <iframe width="70%" height="500" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1135863040&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=false&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/dan_peters" title="Dan Peters" target="_blank" 
 	style="color: #cccccc; text-decoration: none;">Dan Peters</a> · <a href="https://soundcloud.com/dan_peters/sets/original-songs" title="Original songs" target="_blank" style="color: #cccccc; text-decoration: none;">Original songs</a></div>
 </div>
 
-<div class="split right" style="height:90%;padding-top:3%;padding-bottom:7%;background-color:rgba(124, 0, 0,.5);justify-content:space-around;">
-        	        <h1 class = "about_title" style="text-shadow: 2px 2px 0 black;color:rgba(245, 245, 245,1);"> WATCH </h1>
+<div class="split right" style="height:85%;padding-top:5%;padding-bottom:10%;background-color:rgba(124, 0, 0,.6);justify-content:space-around;">
+        	        <h1 class = "about_title" style="color:rgba(245, 245, 245,1);"> WATCH </h1>
         	        <iframe style="width:70%" height="250"src="https://www.youtube.com/embed/videoseries?list=PLBgiNwpkkvdVcjaBKqEDYl8UW4OjLBVKW" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
         	        allowfullscreen="allowfullscreen"
         mozallowfullscreen="mozallowfullscreen" 
@@ -500,10 +469,10 @@ padding:2em;
     </div>
 <div class="icon-bar">
           <a href="http://www.facebook.com" class = "facebook"><i class="fa fa-facebook"></i></a>
-          <a href="#" class = "youtube" ><i class="fa fa-youtube"></i></a>
-          <a href="#" class = "instagram" ><i class="fa fa-instagram"></i></a>
-          <a href="#" class = "soundcloud" ><i class="fa fa-soundcloud"></i></a>
-          <a href="#" class="mail"><i class="fa fa-envelope" ></i></a>
+          <a href="https://www.youtube.com/channel/UCS0jJOO99ijvq3Qc-w0IpdQ" class = "youtube" ><i class="fa fa-youtube"></i></a>
+          <a href="https://www.instagram.com/danpetersmusic/" class = "instagram" ><i class="fa fa-instagram"></i></a>
+          <a href="https://soundcloud.com/dan_peters" class = "soundcloud" ><i class="fa fa-soundcloud"></i></a>
+          <a href="mailto:danpetersmusic@gmail.com" class="mail"><i class="fa fa-envelope" ></i></a>
         </div>
 
 </div>
@@ -512,6 +481,8 @@ padding:2em;
   background-repeat: no-repeat;" id = "Contact">
   <h1 style =  "position:absolute;text-align:center;width:50%;color:white;font-size:6vh;width:100%;bottom:15%;opacity:80%"> Booking:
         <a style="display:inline;color:inherit" class = "email" href="mailto:danpetersmusic@gmail.com">danpetersmusic@gmail.com</a>
+
+        <a style="display:inline;color:inherit" class = "email" href="mailto:danp22@comcast.net"> / danp22@comcast.net</a>
         </h1>
         <div class = "tabcontainer">
         <a class="tablink" href="#Home"> Home</a>
@@ -523,10 +494,10 @@ padding:2em;
 
     <div class="icon-bar-horizontal" style="position:absolute;left:25%;bottom:5%;margin-left: auto;margin-right: auto;opacity:80%">
           <a href="http://www.facebook.com" class = "facebook opaque"><i class="fa fa-facebook"></i></a>
-          <a href="#" class = "youtube opaque" ><i class="fa fa-youtube"></i></a>
-          <a href="#" class = "instagram opaque" ><i class="fa fa-instagram"></i></a>
-          <a href="#" class = "soundcloud opaque"  ><i class="fa fa-soundcloud"></i></a>
-          <a href="#" class="mail opaque"><i class="fa fa-envelope" ></i></a>
+          <a href="https://www.youtube.com/channel/UCS0jJOO99ijvq3Qc-w0IpdQ" class = "youtube opaque" ><i class="fa fa-youtube"></i></a>
+          <a href="https://www.instagram.com/danpetersmusic/" class = "instagram opaque" ><i class="fa fa-instagram"></i></a>
+          <a href="https://soundcloud.com/dan_peters" class = "soundcloud opaque"  ><i class="fa fa-soundcloud"></i></a>
+          <a href="mailto:danpetersmusic@gmail.com" class="mail opaque"><i class="fa fa-envelope" ></i></a>
         </div>
     </div>
     </div>
