--- a/index.html
+++ b/index.html
@@ -81,19 +81,60 @@ color: black;
   text-decoration: none;
 }
 
+.contactpage{
+  position:absolute;
+  text-align:center;
+  width:50%;
+  color:white;
+  font-size:3.5vh;
+  width:100%;
+  bottom:14%;
+  opacity:80%
+}
+
+.about{
+  text-shadow:none;
+  font-size: 2vh; 
+  font-style: normal;
+   font-variant: normal;
+   line-height:2.5vh;
+   font-family:Times;
+   color:#DCE1E3
+}
+
+.aboutlefttext{
+  text-align:left;
+  width:100%;
+  height:100%;
+  overflow:auto;
+}
+.musicmobile{
+  display:none;
+}
+.a:link, visited{
+	text-decoration:none;
+	background-color: transparent;
+}
+
+.a:hover{
+	color: black;
+	  background-color: transparent;
+	text-decoration:underline;
+}
+
 .email:hover{
 color: black;
   background-color: transparent;
   text-decoration: underline;
 }
-.facebook {
+.spotify {
         background: transparent;
         color: white;
                 opacity:75%;
 
       }
-      .facebook:hover {
-        color: #3B5998;
+      .spotify:hover {
+        color: #1DB954;
       }
 
       .opaque {
@@ -193,12 +234,43 @@ color: black;
   padding-top:4%;
 }
 
+
+.aboutleft{
+  background-color:rgba(30,40,50,.95);
+  padding-left:6%;
+  padding-right:2%;
+  padding-top:5%;
+  display:inline;
+  width:52%;
+}
 /* Control the right side */
 .right {
-  float: right;
+    float: right;
 }
 
+.aboutright {
+  width:40%;
+}
 
+.albumart {
+  position:relative;
+  text-align:center;
+  align-items: center;
+  top:0;
+  margin:0;
+  padding:0;
+  display:flex;
+  overflow:auto;
+  flex-direction:column;
+  justify-content:center;
+  float: right;
+  margin-right:10%;margin-top:13%;width:25%;height:auto;
+
+}
+
+.aboutat{
+  overflow:scroll;
+}
 .container_1 {
 	position: relative;
 	height: 100%;
@@ -223,6 +295,7 @@ color: black;
 	}
 
 	.name{
+    color:black;
 	margin:0 auto;
 }
 
@@ -268,6 +341,8 @@ color: black;
 
 .title{
   margin:auto;
+  color:black;
+  font-size:5vh
 }
 
 .about_title{
@@ -279,11 +354,7 @@ color: black;
 .pad{
 padding:2em;
 }
-.about{
-	text-align:left;
-	color:white;
-	font-family:Palatino, Palatino Linotype, Palatino LT STD, Book Antiqua, Georgia, serif;
-	font-size: 2.8vh;}
+
 .icon-bar {
         position: fixed;
         top: 50%;
@@ -304,6 +375,12 @@ padding:2em;
 		position:relative;
         width: 50%; /* Full-width */
         overflow: auto; /* Overflow due to float */
+      }
+
+      .v1 {
+        background-image:url('img/94E2CD09-D5EA-46EA-9ABA-9C7081167ECB.png');
+        background-size: cover;
+        background-repeat:no-repeat;
       }
 
       .icon-bar-horizontal a {
@@ -349,11 +426,111 @@ padding:2em;
 		.demo a:hover {
 		  opacity: .5;}
 
-  @media screen and (max-width: 600px){
+      .header{
+        float:none;
+        text-align:right;
+        top:5em;right:3%
+      }
+
+  @media screen and (max-width: 800px){
+    .musicmobile{
+    width: 100%;
+    height:100%;
+    display:block;
+    text-align:center;
+    position:relative;
+    align-items: center;
+    background-color:rgba(124, 0, 0,.6);
+    padding-top:20%;
+    padding-bottom:20%;
+    }
+
+    .about{
+  text-shadow:none;
+  font-size: 5vw; 
+  font-style: normal;
+   font-variant: normal;
+   line-height:5vw;
+   font-family:Times;
+   color:#DCE1E3;
+}
+      .icon-bar-horizontal a {
+        float: left; /* Float links side by side */
+        text-align: center;
+        width: 20%; /* Equal width (5 icons with 20% width each = 100%) */
+        padding: 0vw 0;
+        transition: all 0.3s ease;
+        color: white;
+        font-size: 7vw;
+
+      }
+.contactpage{
+  position:absolute;
+  text-align:center;
+  width:50%;
+  color:white;
+  font-size:2.5vh;
+  width:94%;
+  bottom:14%;
+  opacity:80%;
+  padding-left:3%;
+  padding-right:3%;
+}
+    .musicdesktopright{
+    display:none;
+    }
+    .musicdesktopleft{
+      display:none;
+    }
+    .musicdesktopcenter{
+      display:none;
+    }
+
+.aboutright {
+  display:none;
+}
+.aboutcenter{
+  display:none;
+}
+
+.aboutleft{
+  background-color:rgba(30,40,50,.95);
+  width:100%;
+  height:100%;
+}
+
+.aboutlefttext{
+  text-align:left;
+  width:80%;
+  height:80%;
+  overflow:auto;
+  padding-top:10%;
+  padding-bottom:10%;
+  padding-right:5%;
+}
+
+      .header{
+        right:0;
+        float:none;
+        text-align:center;
+        top:5em;
+      }
+
+	.albumart {
+	  all:revert;
+	  position:relative;
+	  left: 50%;
+	  transform: translateX(-50%);
+	  width:60%;
+	  top:40%;
+	}
+
   	.name{
+      color:rgba(245, 245, 245,1);
   		font-size:16vw;
   	}
   	.title{
+      color:rgba(245, 245, 245,1);
   		font-size:6vw;
   	}
   	.tabcontainer{
@@ -379,121 +556,120 @@ padding:2em;
       .container_1{
       	background-position:25% top;
       }
+      .v1 {
+        background-image:url('img/444E8202-8CF7-478F-B5A3-1B3DAF132E6B.jpeg');
+        background-size: cover;
+        background-repeat:no-repeat;
+      }
   }
 
 		</style>
 
 <body>
-	<div class = "container_1" id = "Home" style = "background-image:url('img/444E8202-8CF7-478F-B5A3-1B3DAF132E6B.jpeg');background-size: cover; /* or contain depending on what you want */
-  background-repeat: no-repeat;
-  ">
-		
-    	<div class = "split left" style="display:inline;background-color:none;padding-left:5%;width:55%;float:none;text-align:center;top:5em"> 
-    		<h1 class = "name" style="color:rgba(245, 245, 245,1); "> Dan Peters </h1> 
-    		<h3 class = "title"style="color:rgba(245, 245, 245,1);opacity:95%; "> jazz pianist & singer-songwriter </h3>
+	<div class = "container_1 v1" id = "Home" >
+    	<div class = "split left header" style="display:inline;background-color:none;padding-left:5%;width:55%;"> 
+    		<h1 class = "name" > Dan Peters </h1> 
+    		<h3 class = "title" style = "opacity:95%;"> jazz pianist & singer-songwriter </h3>
  		</div>
 
 		<div class = "tabcontainer">
         <a class="tablink" href="#Home" style="color:lightblue"> Home</a>
+            <a class="tablink" href="#About"> About</a>
         <a class="tablink" href="#Music"> Music</a>
-		<a class="tablink" href="#About"> About</a>
         <a class="tablink" href="#Contact"> Contact</a>
     	</div>
 
-
+    	<div class = "albumart" >
+    	<a href = "https://distrokid.com/hyperfollow/danpeters/the-birds-are-louder-in-texas" >
+    	<img src="img/Dan_Cover_FINAL.png" style="width:80%;height:auto;border:5px solid black">     </a>
+    	<a href = "https://distrokid.com/hyperfollow/danpeters/the-birds-are-louder-in-texas" style="text-decoration:none">
+    	<h1 style="font-size: 3vh;margin-top:2vh;color:black;background-color:#fffaf0;border-radius:50%;padding:1.5vh"> DEBUT SINGLE </h1></a>
+    	</div>
 	</div>
-    
-    <div class = "container_1" id = "Music">
-        <div class="split left" style="height:100%;padding-top:0;background-color:rgba(50, 143, 168,.7);">
-        	        <h1 class = "about_title" style="color:rgba(245, 245, 245,1);"> LISTEN </h1>
-<iframe width="70%" height="500" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1135863040&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=false&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/dan_peters" title="Dan Peters" target="_blank" 
-	style="color: #cccccc; text-decoration: none;">Dan Peters</a> · <a href="https://soundcloud.com/dan_peters/sets/original-songs" title="Original songs" target="_blank" style="color: #cccccc; text-decoration: none;">Original songs</a></div>
-</div>
-
-<div class="split right" style="height:85%;padding-top:5%;padding-bottom:10%;background-color:rgba(124, 0, 0,.6);justify-content:space-around;">
-        	        <h1 class = "about_title" style="color:rgba(245, 245, 245,1);"> WATCH </h1>
-        	        <iframe style="width:70%" height="250"src="https://www.youtube.com/embed/videoseries?list=PLBgiNwpkkvdVcjaBKqEDYl8UW4OjLBVKW" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
-        	        allowfullscreen="allowfullscreen"
-        mozallowfullscreen="mozallowfullscreen" 
-        msallowfullscreen="msallowfullscreen" 
-        oallowfullscreen="oallowfullscreen" 
-        webkitallowfullscreen="webkitallowfullscreen"> </iframe> 
-        	        <iframe  style="width:70%" height="250" src="https://www.youtube.com/embed/videoseries?list=PLBgiNwpkkvdUgsInSBjV1LZ7HhdfmK-Vg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
-        	        allowfullscreen="allowfullscreen"
-        mozallowfullscreen="mozallowfullscreen" 
-        msallowfullscreen="msallowfullscreen" 
-        oallowfullscreen="oallowfullscreen" 
-        webkitallowfullscreen="webkitallowfullscreen"> </iframe>  
-</div>
-<div class= "verticalLine">
- 		</div>
-        <div class = "tabcontainer">
-        <a class="tablink" href="#Home"> Home</a>
-        <a class="tablink" href="#Music" style="color:lightblue"> Music</a>
-		<a class="tablink" href="#About" > About</a>
-        <a class="tablink" href="#Contact"> Contact</a>
-    </div>
-    
-    </div>
-        <div class = "container_1" id = "About" style = "background-image:url('img/444E8202-8CF7-478F-B5A3-1B3DAF132E6B.jpeg');background-size: cover; /* or contain depending on what you want */
+            <div class = "container_1 aboutat" id = "About" style = "background-image:url('img/444E8202-8CF7-478F-B5A3-1B3DAF132E6B.jpeg');background-size: cover; /* or contain depending on what you want */
   background-position: center center;
-  background-repeat: no-repeat;
-  ">       
+  background-repeat: no-repeat;">       
 
-<div class = "split right" style="width:50%">
-			<img class="center_1" src="img/14907805_10209979378108339_682669346_o (6).jpeg" style="opacity:100%;width:100%">
-    	</div>
-    	<div class = "split left" style="background-color:rgba(119,136,153,.9);text-shadow: 2px 2px 0 black;width:35%;padding-left:7.5%;padding-right:7.5%;padding-top:0"> 
-    		 <h1 class = "about_title" style=""> ABOUT </h1>
-        <p class="about"  style="text-shadow:none"> A jazz pianist and singer-songwriter new on the Austin scene, Dan Peters draws on a wide range of musical influences to craft his own authentic sound. Seamlessly folding in jazz harmonies with equal parts folk, rock, and Americana, Dan’s warm compositions and lyrics are full of curiosity about nature and the human experience. <br><br>
+<div class = "split right aboutright">
+      <img class="center_1" src="img/14907805_10209979378108339_682669346_o (6).jpeg" style="opacity:100%;width:100%;object-fit:cover">
+      </div>
+      <div class = "split left aboutleft"> 
+        <div class = "aboutlefttext">
+        <p class="about"  >
+        A pianist & singer-songwriter new on the scene in Austin, TX, Dan Peters folds in jazz harmonies with equal parts folk, rock, and Americana to craft his own authentic sound. Dan’s warm compositions and lyrics are full of curiosity about nature and the human experience. Listeners have described his music as “someone walking in the rain through an old timey downtown.” Dan’s musical influences include songwriting masters like Paul Simon and Joni Mitchell, jazz piano greats like Herbie Hancock and Ahmad Jamal, and a wide range of folk and rock artists including Leif Vollebekk, Mandolin Orange, and Wilco.
+</p>
+<p class="about" style="text-align:center;">
+---</p>
+<p class = "about" >
+Dan has played the piano for as long as he can remember. Growing up in Massachusetts, he started off as a classical pianist, winning recognition in competitions and earning a performance at Carnegie Hall in New York. Dan remembers the first time he learned to improvise as a turning point in his creative journey. He studied jazz piano throughout middle and high school, and performed across Massachusetts at venues including Chianti’s Jazz Club and the Shalin Liu Performance Center. He could be found every week playing jazz and funk music with his trio at the Eastern Yacht Club, and playing solo piano in the cocktail lounge at the Harbor Light Inn. On many Fourth of July holidays, Dan sang and played keys with his rock band at the Marblehead Festival of Arts, on a waterfront stage overlooking the town’s harbor.<br><br>
 
-		Dan’s musical influences include:<br>
-		Leif Vollebeck<br>
-		Brad Mehldau / Chris Thile<br>
-		Bill Evans<br>
-		Charles Mingus<br>
-		Mandolin Orange<br>
-		Paul Simon<br>
-		Wilco / Jeff Tweedy<br>
-		Radiohead
-		 </p>
- 		</div>
+In 2015, Dan moved to the Chicagoland area to study at Northwestern University, pursuing a double major in Environmental Science and Jazz Studies. There, he continued developing his skills as a jazz pianist, composer, and improviser. Dan was fortunate to benefit from the guidance of incredibly talented mentors and peers, such as Victor Goines, director of the program. Throughout this time he also shaped his own artistic identity as a singer-songwriter. He crafted dozens of original compositions and performed them at cafes, open mics, and among friends. Dan’s songs draw on his diverse musical influences, with rich jazz harmonies supporting simple, memorable melodies. His thoughtful lyrics are full of natural imagery and metaphor, taking inspiration from poets like Robinson Jeffers, and reflecting his own introspection and careful observation of the world around him. <br><br>
 
- 		<div class= "verticalLine">
+After graduating from Northwestern, Dan moved to Austin to work on his other passion: environmental research and advocacy. He is keen to connect with the vibrant musical community here and continue to develop and share his own craft.
+
+     </p>
+   </div>
+    </div>
+
+    <div class= "verticalLine aboutcenter" style="left:60%">
+    </div>
+        <div class = "tabcontainer">
+        <a class="tablink" href="#Home"> Home</a>
+            <a class="tablink" href="#About" style="color:lightblue"> About</a>
+
+    <a class="tablink" href="#Music"> Music</a>
+        <a class="tablink" href="#Contact"> Contact</a>
+    </div>
+</div>
+    <div class = "container_1" id = "Music">
+      <div class = "musicmobile">
+        <iframe src="https://open.spotify.com/embed/artist/0U7nvp2dvPQ3n4hR45i1s7" width="300" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe><br><br><br>
+        <iframe width="355" height="200" src="https://www.youtube.com/embed/videoseries?list=PLBgiNwpkkvdVcjaBKqEDYl8UW4OjLBVKW" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+        <div class="split left musicdesktopleft" style="height:100%;padding-top:0;background-color:rgba(50, 143, 168,.7);">
+        	        <h1 class = "about_title" style="color:rgba(245, 245, 245,1);"> LISTEN </h1>
+<iframe src="https://open.spotify.com/embed/artist/0U7nvp2dvPQ3n4hR45i1s7" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+</div>
+<div class="split right musicdesktopright" style="height:85%;padding-top:5%;padding-bottom:10%;background-color:rgba(124, 0, 0,.6);justify-content:space-around;">
+        	        <h1 class = "about_title" style="color:rgba(245, 245, 245,1);"> WATCH </h1>
+        	        <iframe width="444" height="250" src="https://www.youtube.com/embed/videoseries?list=PLBgiNwpkkvdVcjaBKqEDYl8UW4OjLBVKW" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe width="444" height="250" src="https://www.youtube.com/embed/h9WS51I19Ag" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+</div>
+<div class= "verticalLine musicdesktopcenter">
  		</div>
         <div class = "tabcontainer">
         <a class="tablink" href="#Home"> Home</a>
-		<a class="tablink" href="#Music"> Music</a>
-		<a class="tablink" href="#About" style="color:lightblue"> About</a>
+		<a class="tablink" href="#About" > About</a>
+            <a class="tablink" href="#Music" style="color:lightblue"> Music</a>
+
         <a class="tablink" href="#Contact"> Contact</a>
     </div>
-<div class="icon-bar">
-          <a href="http://www.facebook.com" class = "facebook"><i class="fa fa-facebook"></i></a>
+    <div class="icon-bar">
+        <a href="https://open.spotify.com/artist/0U7nvp2dvPQ3n4hR45i1s7?si=iLyR5accQnip95h55v3WUQ" class = "spotify"><i class="fa fa-spotify"></i></a>
           <a href="https://www.youtube.com/channel/UCS0jJOO99ijvq3Qc-w0IpdQ" class = "youtube" ><i class="fa fa-youtube"></i></a>
           <a href="https://www.instagram.com/danpetersmusic/" class = "instagram" ><i class="fa fa-instagram"></i></a>
           <a href="https://soundcloud.com/dan_peters" class = "soundcloud" ><i class="fa fa-soundcloud"></i></a>
           <a href="mailto:danpetersmusic@gmail.com" class="mail"><i class="fa fa-envelope" ></i></a>
         </div>
-
+    </div>
 </div>
     <div class = "container_1" style="background-image:url('img/14875863_10209979378548350_1073256539_o.jpeg');background-size: cover; /* or contain depending on what you want */
   background-position: center center;
   background-repeat: no-repeat;" id = "Contact">
-  <h1 style =  "position:absolute;text-align:center;width:50%;color:white;font-size:6vh;width:100%;bottom:15%;opacity:80%"> Booking:
+  <h1 class = "contactpage" > Get in touch through email or the social media buttons below!<br><br>
         <a style="display:inline;color:inherit" class = "email" href="mailto:danpetersmusic@gmail.com">danpetersmusic@gmail.com</a>
-
-        <a style="display:inline;color:inherit" class = "email" href="mailto:danp22@comcast.net"> / danp22@comcast.net</a>
         </h1>
         <div class = "tabcontainer">
         <a class="tablink" href="#Home"> Home</a>
+            <a class="tablink" href="#About" > About</a>
         <a class="tablink" href="#Music" > Music</a>
-		<a class="tablink" href="#About" > About</a>
         <a class="tablink" href="#Contact" style="color:lightblue"> Contact</a>
     </div>
     <div>
 
     <div class="icon-bar-horizontal" style="position:absolute;left:25%;bottom:5%;margin-left: auto;margin-right: auto;opacity:80%">
-          <a href="http://www.facebook.com" class = "facebook opaque"><i class="fa fa-facebook"></i></a>
+          <a href="https://open.spotify.com/artist/0U7nvp2dvPQ3n4hR45i1s7?si=iLyR5accQnip95h55v3WUQ" class = "spotify"><i class="fa fa-spotify"></i></a>
           <a href="https://www.youtube.com/channel/UCS0jJOO99ijvq3Qc-w0IpdQ" class = "youtube opaque" ><i class="fa fa-youtube"></i></a>
           <a href="https://www.instagram.com/danpetersmusic/" class = "instagram opaque" ><i class="fa fa-instagram"></i></a>
           <a href="https://soundcloud.com/dan_peters" class = "soundcloud opaque"  ><i class="fa fa-soundcloud"></i></a>
