--- a/index.html
+++ b/index.html
@@ -88,18 +88,18 @@ color: black;
   color:white;
   font-size:3.5vh;
   width:100%;
-  bottom:14%;
+  bottom:10%;
   opacity:80%
 }
 
 .about{
   text-shadow:none;
-  font-size: 2vh; 
+  font-size: 1.25vw; 
   font-style: normal;
    font-variant: normal;
-   line-height:2.5vh;
+   line-height:1.5vw;
    font-family:Times;
-   color:#DCE1E3
+   color:#DCE1E3;
 }
 
 .aboutlefttext{
@@ -130,7 +130,7 @@ color: black;
 .spotify {
         background: transparent;
         color: white;
-                opacity:75%;
+                opacity:95%;
 
       }
       .spotify:hover {
@@ -164,7 +164,7 @@ color: black;
       .youtube {
         background: transparent;
         color: white;
-        opacity:75%;
+        opacity:95%;
       }
 
       .youtube:hover {
@@ -174,7 +174,7 @@ color: black;
       .instagram {
         background: transparent;
         color: white;
-                opacity:75%;
+                opacity:95%;
 
       }
 
@@ -185,7 +185,7 @@ color: black;
       .soundcloud {
         background: transparent;
         color: white;
-                opacity:75%;
+                opacity:95%;
 
       }	
 
@@ -196,7 +196,7 @@ color: black;
       .mail {
         background:transparent;
         color:white;
-                opacity:75%;
+                opacity:95%;
 
       }
 
@@ -237,11 +237,11 @@ color: black;
 
 .aboutleft{
   background-color:rgba(30,40,50,.95);
-  padding-left:6%;
-  padding-right:2%;
+  padding-left:5%;
+  padding-right:1%;
   padding-top:5%;
   display:inline;
-  width:52%;
+  width:61%;
 }
 /* Control the right side */
 .right {
@@ -249,14 +249,14 @@ color: black;
 }
 
 .aboutright {
-  width:40%;
+  width:33%;
 }
 
 .albumart {
-  position:relative;
-  text-align:center;
-  align-items: center;
-  top:0;
+  position:absolute;
+  width:25%;
+  bottom:4%;
+  right:7%;
   margin:0;
   padding:0;
   display:flex;
@@ -264,8 +264,6 @@ color: black;
   flex-direction:column;
   justify-content:center;
   float: right;
-  margin-right:10%;margin-top:13%;width:25%;height:auto;
-
 }
 
 .aboutat{
@@ -378,7 +376,7 @@ padding:2em;
       }
 
       .v1 {
-        background-image:url('img/94E2CD09-D5EA-46EA-9ABA-9C7081167ECB.png');
+        background-image:url('img/94E2CD09-D5EA-46EA-9ABA-9C7081167ECB (1).png');
         background-size: cover;
         background-repeat:no-repeat;
       }
@@ -611,7 +609,7 @@ After graduating from Northwestern, Dan moved to Austin to work on his other pas
    </div>
     </div>
 
-    <div class= "verticalLine aboutcenter" style="left:60%">
+    <div class= "verticalLine aboutcenter" style="left:67%">
     </div>
         <div class = "tabcontainer">
         <a class="tablink" href="#Home"> Home</a>
@@ -626,9 +624,10 @@ After graduating from Northwestern, Dan moved to Austin to work on his other pas
         <iframe src="https://open.spotify.com/embed/artist/0U7nvp2dvPQ3n4hR45i1s7" width="300" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe><br><br><br>
         <iframe width="355" height="200" src="https://www.youtube.com/embed/videoseries?list=PLBgiNwpkkvdVcjaBKqEDYl8UW4OjLBVKW" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-        <div class="split left musicdesktopleft" style="height:100%;padding-top:0;background-color:rgba(50, 143, 168,.7);">
+        <div class="split left musicdesktopleft" style="height:94%;padding-top:3%;padding-bottom:3%;background-color:rgba(50, 143, 168,.7);justify-content:space-around">
         	        <h1 class = "about_title" style="color:rgba(245, 245, 245,1);"> LISTEN </h1>
-<iframe src="https://open.spotify.com/embed/artist/0U7nvp2dvPQ3n4hR45i1s7" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<iframe src="https://open.spotify.com/embed/artist/0U7nvp2dvPQ3n4hR45i1s7" width="444" height="250" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<iframe width="444" height="250" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1135863040&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/dan_peters" title="Dan Peters" target="_blank" style="color: #cccccc; text-decoration: none;">Dan Peters</a> · <a href="https://soundcloud.com/dan_peters/sets/original-songs" title="Original songs" target="_blank" style="color: #cccccc; text-decoration: none;">Original songs</a></div>
 </div>
 <div class="split right musicdesktopright" style="height:85%;padding-top:5%;padding-bottom:10%;background-color:rgba(124, 0, 0,.6);justify-content:space-around;">
         	        <h1 class = "about_title" style="color:rgba(245, 245, 245,1);"> WATCH </h1>
@@ -657,7 +656,7 @@ After graduating from Northwestern, Dan moved to Austin to work on his other pas
     <div class = "container_1" style="background-image:url('img/14875863_10209979378548350_1073256539_o.jpeg');background-size: cover; /* or contain depending on what you want */
   background-position: center center;
   background-repeat: no-repeat;" id = "Contact">
-  <h1 class = "contactpage" > Get in touch through email or the social media buttons below!<br><br>
+  <h1 class = "contactpage" > Get in touch through email or the social media buttons below!<br> <br>
         <a style="display:inline;color:inherit" class = "email" href="mailto:danpetersmusic@gmail.com">danpetersmusic@gmail.com</a>
         </h1>
         <div class = "tabcontainer">
@@ -668,7 +667,7 @@ After graduating from Northwestern, Dan moved to Austin to work on his other pas
     </div>
     <div>
 
-    <div class="icon-bar-horizontal" style="position:absolute;left:25%;bottom:5%;margin-left: auto;margin-right: auto;opacity:80%">
+    <div class="icon-bar-horizontal" style="position:absolute;left:25%;bottom:0;margin-left: auto;margin-right: auto;opacity:80%">
           <a href="https://open.spotify.com/artist/0U7nvp2dvPQ3n4hR45i1s7?si=iLyR5accQnip95h55v3WUQ" class = "spotify"><i class="fa fa-spotify"></i></a>
           <a href="https://www.youtube.com/channel/UCS0jJOO99ijvq3Qc-w0IpdQ" class = "youtube opaque" ><i class="fa fa-youtube"></i></a>
           <a href="https://www.instagram.com/danpetersmusic/" class = "instagram opaque" ><i class="fa fa-instagram"></i></a>
